name:                tcod-raw
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/elliottt/tcod-raw
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          awesomelyawesome@gmail.com
copyright:           2013
category:            Game
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  

library
  exposed-modules:     Graphics.UI.TCOD.Raw,
                       Graphics.UI.TCOD.Raw.Console,
                       Graphics.UI.TCOD.Raw.ConsoleTypes
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.6 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries:     SDL GL
  include-dirs:        libtcod-1.5.1/include
  c-sources:           libtcod-1.5.1/src/bresenham_c.c
                       libtcod-1.5.1/src/bsp_c.c
                       libtcod-1.5.1/src/color_c.c
                       libtcod-1.5.1/src/console_c.c
                       libtcod-1.5.1/src/fov_c.c
                       libtcod-1.5.1/src/fov_circular_raycasting.c
                       libtcod-1.5.1/src/fov_diamond_raycasting.c
                       libtcod-1.5.1/src/fov_permissive2.c
                       libtcod-1.5.1/src/fov_recursive_shadowcasting.c
                       libtcod-1.5.1/src/fov_restrictive.c
                       libtcod-1.5.1/src/heightmap_c.c
                       libtcod-1.5.1/src/image_c.c
                       libtcod-1.5.1/src/lex_c.c
                       libtcod-1.5.1/src/list_c.c
                       libtcod-1.5.1/src/mersenne_c.c
                       libtcod-1.5.1/src/namegen_c.c
                       libtcod-1.5.1/src/noise_c.c
                       libtcod-1.5.1/src/parser_c.c
                       libtcod-1.5.1/src/path_c.c
                       libtcod-1.5.1/src/png/lodepng.c
                       libtcod-1.5.1/src/sys_c.c
                       libtcod-1.5.1/src/sys_opengl_c.c
                       libtcod-1.5.1/src/sys_sdl_c.c
                       libtcod-1.5.1/src/sys_sdl_img_bmp.c
                       libtcod-1.5.1/src/sys_sdl_img_png.c
                       libtcod-1.5.1/src/tree_c.c
                       libtcod-1.5.1/src/txtfield_c.c
                       libtcod-1.5.1/src/wrappers.c
                       libtcod-1.5.1/src/zip_c.c

executable tcod-example
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       base >= 4.6 && < 5,
                       tcod-raw
  default-language:    Haskell2010
